<resources>
    <string name="app_name">crud</string>
    <string name="pri_lbl_titulo">Venta de Autos</string>
    <string name="lbl_marca">Marca</string>
    <string name="lbl_modelo">Modelo</string>
    <string name="lbl_placa">Placa</string>
    <string name="lbl_precio">Precio</string>
    <string name="pri_btn_elegir">Elegir ... </string>
    <string name="pri_btn_registrar">Registrar</string>
    <string name="pri_btn_mostrar">Mostrar</string>
    <string name="edi_btn_actualizar">Actualizar</string>
    <string name="edi_btn_eliminar">Eliminar</string>
    <string name="edi_btn_regresar">Regresar</string>
</resources>