<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".actividades.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pri_lbl_titulo"
            android:textColor="#FF1100"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="26sp"/>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="800px" android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/txtMarca"
                android:layout_marginLeft="15px"
                android:layout_width="800px"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:layout_marginBottom="10dp"
                android:hint="@string/lbl_marca"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/txtModelo"
                android:layout_marginLeft="15px"
                android:layout_width="800px"
                android:maxLength="30"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/lbl_modelo"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/txtPlaca"
                android:layout_marginLeft="15px"
                android:layout_width="800px"
                android:maxLength="7"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/lbl_placa"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText android:id="@+id/txtPrecio"
                android:layout_marginLeft="15px"
                android:layout_width="800px"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:layout_marginBottom="10dp"
                android:hint="@string/lbl_precio"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center" android:layout_marginTop="30dp" android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgFotoAuto"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@mipmap/ic_launcher">
            </ImageView>
            <Button
                android:layout_gravity="center"
                android:id="@+id/btnElegir"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:text="@string/pri_btn_elegir">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:text="@string/pri_btn_registrar">
            </Button>
            <Button
                android:id="@+id/btnMostrar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/pri_btn_mostrar">
            </Button>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>